# hbst-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-compose.yml  build.sh  setup.py  test-compose.yml  test.sh
.github/workflows/: build_linux.yml
docker/manylinux1/: build_x86_64.sh  x86_64.Dockerfile
docker/python36/: buster.Dockerfile
docker/python37/: buster.Dockerfile
docker/python38/: buster.Dockerfile
docker/python39/: buster.Dockerfile
example/: match.py  matcher.py  requirements.txt
src/: module.cpp  threadpool.cpp  threadpool.h
tests/: test_basic.py
